# TecLangv3

./: .gitignore  App.cpp  App.h  Builder.h  CMakeLists.txt  Console.cpp  Console.h  README.md  count.sh  debug.sh  main.cpp  main_log.cpp  main_network.cpp  new_main.cpp  optimize.sh
analysis/: AnalysisInfo.h  Analyzer.h  SemanticAnalysisVisitor.cpp  SemanticAnalysisVisitor.h
analysis/expressions/: BinaryOperation.cpp  BinaryOperation.h  StaticRef.cpp  StaticRef.h  When.cpp  When.h  WhenCondition.cpp  WhenCondition.h
analysis/statements/: IfStatement.cpp  IfStatement.h  Return.cpp  Return.h
analysis/topLevel/: Enum.cpp  Enum.h  Function.cpp  Function.h
analysisFirst/: AnalysisFirstStageVisitor.h
ast/: Expressions.cpp  Expressions.h  Literals.h  Node.h  Statements.cpp  Statements.h  StringInternTable.h  TopLevel.h  Visitor.h
ast/expressions/: ArrayRef.cpp  ArrayRef.h  BinaryOperation.h  ConstructorCall.cpp  ConstructorCall.h  FunctionCall.cpp  FunctionCall.h  StaticRef.cpp  StaticRef.h  TypeReference.cpp  TypeReference.h  VarReference.cpp  VarReference.h  When.h
ast/literals/: Boolean.h  Double.h  Integer.h  Null.h  String.h
ast/statements/: Break.h  Continue.h  ForLoop.h  IfStatement.h  Return.h  VarDeclaration.cpp  VarDeclaration.h
ast/topLevel/: Enum.cpp  Enum.h  Function.cpp  Function.h  TypeBase.cpp  TypeBase.h  TypeDefinition.cpp  TypeDefinition.h  TypeVariant.cpp  TypeVariant.h
compiler/: CodegenVisitor.h  Compiler.h  ErrorManager.cpp  ErrorManager.h  ErrorTable.cpp  ErrorTable.h  PrettyPrintVisitor.h  SymbolTable.cpp  SymbolTable.h  TypeCoercion.cpp  TypeCoercion.h
compiler/codegen/: CodegenContext.h  FunctionContext.h  VarDeclarationContext.h  WhenContext.cpp  WhenContext.h
compiler/context/: CodegenContext.h  ForLoopContext.h  FunctionContext.h  ReturnContext.cpp  ReturnContext.h  VarDeclarationContext.h  WhenContext.cpp  WhenContext.h
compiler/expressions/: BinaryOperation.cpp  BinaryOperation.h  ConstructorCall.h  FunctionArgument.h  FunctionCall.cpp  FunctionCall.h  StaticRef.cpp  StaticRef.h  VariableReference.cpp  VariableReference.h  When.h
compiler/scope/: Scope.h  ScopeManager.cpp  ScopeManager.h
compiler/statements/: Break.h  Continue.h  ForLoop.h  Function.cpp  Function.h  IfStatement.h  Return.h  TypeDefinition.cpp  TypeDefinition.cpp.bak  TypeDefinition.h  VariableDeclaration.cpp  VariableDeclaration.h
compiler/topLevel/: Enum.cpp  Enum.h  TypeBase.cpp  TypeBase.h  TypeFunction.cpp  TypeFunction.h
context/: Context.h  Scope.h  SymbolTable.cpp  SymbolTable.h
context/analysis/: FunctionAnalysisContext.h  IfStatementAnalysisContext.h  ReturnAnalysisContext.h  StaticRefAnalysisContext.h  WhenAnalysisContext.h  WhenConditionAnalysisContext.h
context/compiler/: ForLoopCompilerContext.h  FunctionCompilerContext.h  IfCompilerContext.h  ReturnCompilerContext.h  VarDeclarationCompilerContext.h  WhenCompilerContext.cpp  WhenCompilerContext.h
context/preAnalysis/: FunctionContext.h
debug/: PrettyPrintVisitor.h  timer.h
lexer/: Lexer.cpp  Lexer.h  NewLexer.h  PunctuationTrie.h  Token.h  keywords_hash.h  util.h
misc/: BitFlag.h
parser/: Parser.cpp  Parser.h
parser/expressions/: ArrayRef.cpp  ArrayRef.h  ConstructorCall.cpp  ConstructorCall.h  Expression.cpp  Expression.h  Function.cpp  Function.h  FunctionCall.cpp  FunctionCall.h  Increment.cpp  Increment.h  StaticRef.cpp  StaticRef.h  TypeReference.cpp  TypeReference.h  VariableReference.cpp  VariableReference.h  When.cpp  When.h
parser/literals/: Boolean.h  Double.h  Integer.h  (+2 more)
preAnalysis/: PreAnalysisVisitor.h
scope/: Scope.cpp  Scope.h  Symbol.cpp  Symbol.h
symbolTable/: SymbolN.h  SymbolTable.cpp  SymbolTable.h
test/: 01.lang  01.tec  access_modifiers.lang  access_modifiers.tec  enums.tec  enums.teclang  generics.lang  generics.tec  imports.tec  loops.lang  nested_types.tec  playground.001.tec  playground.001.teclang  playground.002.tec  playground.003.tec  playground.004.tec  playground.tec  playground.teclang  type_infer.tec
tests/: CMakeLists.txt  main.cpp
(+39 files in other folders)
